# CourseWork_NSTU

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_mode_view.cpp  build_mode_view.h  docker-compose.yml  intro_widget.cpp  intro_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  simulation_backend.cpp  simulation_backend.h  simulation_view.cpp  simulation_view.h  traffic_core.cpp  traffic_core.h  webbridge.cpp  webbridge.h
db/init/: 01_dump.sql
ui/: start_page.html
